--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/css": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.4",
     "next": "12.3.0",
+    "qrcode-generator": "^1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
