--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/css": "^11.10.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.10.4",
     "next": "12.3.0",
     "qrcode-generator": "^1.4.4",
